@@ -1,5 +1,7 @@
 2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* lily/part-combine-music.cc: removed file and class.
+
 	* lily/context-specced-music-iterator.cc (class
 	Context_specced_music_iterator): new file. Obsoletes the
 	Context_specced_music type.
